--- a/styles/style.css
+++ b/styles/style.css
@@ -21,6 +21,7 @@
     padding: 18px 35px;
     border-radius: 5px;
     border: none;
+    
 
 }
 .header{
@@ -46,7 +47,10 @@ nav ul li{
 nav ul{
     display: flex;
     align-items: center;
+    justify-content: center;
+    
 }
+
 
 ul li{
     margin-right: 50px;
